chore: additional coverage fix